--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hjjinx.github.io/chatting-app-react",
+  "homepage": "https://techjoint.tk",
   "name": "chitchat",
   "version": "0.1.0",
   "private": true,
